--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>FUT FRENZY</h1>
-    <p> </p>
+    <p> Welcome to my page where i make sure that you get the latest news 
+        and updates about everything in the football world! Surely by now
+        you are already pretty much a football expert, but there is always much more
+        to be learned.
+    </p>
+    <img src="imgres.html" alt="pic of a football">
 </body>
 </html>
