--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <h1>FUT FRENZY</h1>
-    <div>class="start-page"</div>
+    <div class="start-page">
     <p> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
         you are already pretty much a football expert, but there is always much more
         to be learned.
     </p>
-    <img src="imgres.html" alt="pic of a football">
+    <img src="football-488714_640.jpg" alt="pic of a football">
+    </div>
 </body>
 </html>
