--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
         you are already pretty much a football expert, but there is always much more
-        to be learned.
+        to be learned. N
     </h3>
     <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
