--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         you are already pretty much a football expert, but there is always much more
         to be learned.
     </h3>
+    </div>
+    <div class="start-page-img"></div>
     <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
 </body>
