--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         to be learned.
     </h3>
     </div>
-    <div class="start-page-img"></div>
+    <div class="start-page-img">
     <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
+    <div class="pitch-container">
+    <img src="pitch.jpg" alt="green football pitch">
+</div>
 </body>
 </html>
