--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
         you are already pretty much a football expert, but there is always much more
         to be learned.
     </h3>
+    <div class="inform-player-list">
+    <h4>Top 5 most inform players right now</h4>
+    <ol>
+        <li>Raphina</li>
+        <li>Pedri</li>
+        <li>Salah</li>
+        <li>Mbappe</li>
+        <li>Isak</li>
+        </ol>
+        </div>
     <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
-    <div class="pitch-container">
-</div>
 </body>
 </html>
