--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         you are already pretty much a football expert, but there is always much more
         to be learned.
     </h3>
+    <div class="page-container">
     <div class="inform-player-list">
-    <h4>Top 5 most inform players right now</h4>
-    <ol>
+     <h4>Top 5 most inform players right now</h4>
+     <ol>
         <li>Raphina</li>
         <li>Pedri</li>
         <li>Salah</li>
@@ -25,6 +26,7 @@
         <li>Isak</li>
         </ol>
         </div>
+    </div>
     <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
 </body>
