--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <h1>FUT FRENZY</h1>
     <hr>
     <div class="start-page">
+    <div class="intro-container">
     <h3> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
         you are already pretty much a football expert, but there is always much more
         to be learned.
     </h3>
+    <img src="football-488714_640.jpg" alt="pic of a football">
+    </div>
     <div class="page-container">
     <div class="inform-player-list">
      <h4>Top 5 most inform players right now</h4>
@@ -28,7 +31,6 @@
         </ol>
         </div>
     </div>
-    <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
 </body>
 </html>
