--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>FUT FRENZY</h1>
     <hr>
     <div class="start-page">
-    <div class="intro-container">
+    <div class="intro-section">
     <h3> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
         you are already pretty much a football expert, but there is always much more
