--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     
     <h1>FUT FRENZY</h1>
     <hr>
+    <h2><a href="news.html">NEWS</a></h2>
+    <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
+    <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
+    <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
     <div class="start-page">
     <div class="intro-section">
     <h3> Welcome to my page where i make sure that you get the latest news 
@@ -19,6 +23,10 @@
     </h3>
     <img src="football-488714_640.jpg" alt="pic of a football">
     </div>
+    <h2>NEWS</h2>
+    <h2>MATCH REPORTS</h2>
+    <h2>OPINION & ANALYSIS</h2>
+    <h2>ABOUT AND CONTACT page</h2>
     <div class="page-container">
     <div class="inform-player-list">
      <h4>Top 5 most inform players right now</h4>
