--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     
     <h1>FUT FRENZY</h1>
     <hr>
+<div class="button-container">
     <h2><a href="news.html">NEWS</a></h2>
     <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
     <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
     <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
+</div>
     <div class="start-page">
     <div class="intro-section">
     <h3> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
         you are already pretty much a football expert, but there is always much more
         to be learned. Below you can view some of news articles and lists like "Top 5 most inform players".
-        And on top there are a few links foe alittle adventure in my blog. Thank you very much for visiting
+        And on top there are a few links for a little adventure in my blog. Thank you very much for visiting
         my website and i hope you all enjoy my little blog!
     </h3>
     <img src="football-488714_640.jpg" alt="pic of a football">
