--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <div class="intro-section">
     <h3> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
-        you are already pretty much a football expert, but there is always much more
-        to be learned. Below you can view some of news articles and lists like "Top 5 most inform players".
-        And on top there are a few links for a little adventure in my blog. Thank you very much for visiting
+        you are already pretty much a football expert, but there is 
+        always much more to be learned. Below you can view some of news articles and lists like 
+        "Top 5 most inform players". And on top there are a 
+        few links for a little adventure in my blog. Thank you very much for visiting
         my website and i hope you all enjoy my little blog!
     </h3>
     <img src="football-488714_640.jpg" alt="pic of a football">
