--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header-container">
     <h1>FUT FRENZY</h1>
     <hr>
 <div class="button-container">
@@ -16,6 +16,7 @@
     <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
     <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
     <hr>
+</div>
 </div>
     <div class="start-page">
     <div class="intro-section">
