--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
         <li>Isak</li>
         </ol>
         </div>
+        <div class="article-container">
         <h2>The Champions League Quarter-finals Arsenal VS Real Madrid</h2>
         <p>It's starting to get heated over in the biggest stage of them all.
             Only 8 teams left fighting to get the biggest trophy in club football.
             Barcelona, Real Madrid, Arsenal, Inter, Bayern Munchen, Dortmund, 
             Aston Villa and PSG are the 8 big names left and it has been
             a very different competition than the previous years. With 
-            the big change of the wgolechampions league format, there have
+            the big change of the whole champions league format, there have
             been CRAZY games. Arsenal with a DEVESTATING home win against the 
             holding champions. A crushing 3-0 win with 2 absolute screamers
-            from none other than Declan Rice. Not the first,but also his second ever 
+            from none other than Declan Rice. Not the first, but also his second ever 
             direct freekick of his football career. We are patiently waiting
             to see what is going to happen in Santiago Bernabeu!
         </p>
+    </div>
     </div>
     </div>
 </body>
