--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
     </div>
     <div class="page-container">
     <div class="inform-player-list">
-     <h4>Top 5 most inform players right now</h4>
+     <h4>Top 10 most inform players right now in no order</h4>
      <ol>
         <li>Raphina</li>
         <li>Pedri</li>
         <li>Salah</li>
         <li>Mbappe</li>
         <li>Isak</li>
+        <li>Yamal</li>
+        <li>Musiala</li>
+        <li>Doue</li>
+        <li>Kvaratshkelia</li>
+        <li>Lewandowski</li>
         </ol>
         </div>
         <div class="article-container">
