--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="header-container">
     <h1>FUT FRENZY</h1>
     <hr>
+    <div class="main-content">
 <div class="button-container">
     <h2><a href="news.html">NEWS</a></h2>
     <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
@@ -60,6 +61,7 @@
             direct freekick of his football career. We are patiently waiting
             to see what is going to happen in Santiago Bernabeu!
         </p>
+    </div>
     </div>
     </div>
     </div>
