--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <hr>
 </div>
 </div>
+<div class="main-conatiner"></div>
     <div class="start-page">
     <div class="intro-section">
     <h3> Welcome to my page where i make sure that you get the latest news 
@@ -63,5 +64,12 @@
     </div>
     </div>
     </div>
+    </div>
+    
+<footer class="footer-container">
+    <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
+    <p>Contact me: engjikrass@hotmail.com</p>
+</footer>
+
 </body>
 </html>
