--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
 </div>
 </div>
-<div class="main-conatiner"></div>
+<div class="main-container"></div>
     <div class="start-page">
     <div class="intro-section">
     <h3> Welcome to my page where i make sure that you get the latest news 
