--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header-container">
-    <h1>FUT FRENZY</h1>
+    <h1><a href="index.html">FUT FRENZY</a></h1>
     <hr>
 <div class="button-container">
     <h2><a href="news.html">NEWS</a></h2>
