Added a bit of comments

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="header-container">
+        <!--The home pages title-->
     <h1>FUT FRENZY</h1>
     <hr>
 <div class="button-container">
+    <!--The buttons linked to ther pages-->
     <h2><a href="news.html">NEWS</a></h2>
     <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
     <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
@@ -21,6 +23,7 @@
 <div class="main-container"></div>
     <div class="start-page">
     <div class="intro-section">
+        <!--Welcome text of the home page-->
     <h3> Welcome to my page where i make sure that you get the latest news 
         and updates about everything in the football world! Surely by now
         you are already pretty much a football expert, but there is 
@@ -33,6 +36,7 @@
     </div>
     <div class="page-container">
     <div class="inform-player-list">
+        <!--List of best players right now-->
      <h4>Top 10 most inform players right now in no order</h4>
      <ol>
         <li>Raphina</li>
@@ -48,6 +52,7 @@
         </ol>
         </div>
         <div class="article-container">
+            <!--News article about the champions league quarter finals-->
         <h2>The Champions League Quarter-finals Arsenal VS Real Madrid</h2>
         <p>It's starting to get heated over in the biggest stage of them all.
             Only 8 teams left fighting to get the biggest trophy in club football.
@@ -67,6 +72,7 @@
     </div>
     
 <footer class="footer-container">
+    <!--Footer forthe welcome page-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
     <p>Contact me: engjikrass@hotmail.com</p>
 </footer>
