--- a/news.html
+++ b/news.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="news.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header-container">
+        <!--The home pages title-->
+    <h1>FUT FRENZY</h1>
+    <hr>
+<div class="button-container">
+    <!--The buttons linked to ther pages-->
+    <h2><a href="news.html">NEWS</a></h2>
+    <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
+    <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
+    <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
+    <hr>
+</div>
 </body>
 </html>
