--- a/news.html
+++ b/news.html
@@ -19,5 +19,10 @@
     <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
     <hr>
 </div>
+<footer class="footer-container">
+    <!--Footer for the welcome page-->
+    <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
+    <p>Contact me: engjikrass@hotmail.com</p>
+</footer>
 </body>
 </html>
