--- a/news.html
+++ b/news.html
@@ -19,6 +19,12 @@
     <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
     <hr>
 </div>
+<img src="arsenal-football-club.png" alt="pic of arsenal badge">
+<h3>VS</h3>
+<img src="psg-club-emblem.jpg" alt="pic of psg badge">
+<img src="barcelona-club-emblem.jpg" alt="pic of barcelona badge">
+<h3>VS</h3>
+<img src="inter-club-emblem.png" alt="pic of inter badge">
 <footer class="footer-container">
     <!--Footer for the welcome page-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
@@ -26,3 +32,4 @@
 </footer>
 </body>
 </html>
+<!--make layout css-->
