--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="layout.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -20,7 +21,7 @@
     <hr>
 </div>
 </div>
-<div class="main-container"></div>
+<div class="main-container">
     <div class="start-page">
     <div class="intro-section">
         <!--Welcome text of the home page-->
@@ -70,6 +71,7 @@
     </div>
     </div>
     </div>
+</div>
     
 <footer class="footer-container">
     <!--Footer for the welcome page-->
