--- a/news.html
+++ b/news.html
@@ -19,6 +19,7 @@
     <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
     <hr>
 </div>
+<div class="badge-container">
 <img src="arsenal-football-club.png" alt="pic of arsenal badge">
 <h3>VS</h3>
 <img src="psg-club-emblem.jpg" alt="pic of psg badge">
@@ -26,6 +27,7 @@
 <h3>VS</h3>
 <img src="inter-club-emblem.png" alt="pic of inter badge">
 <footer class="footer-container">
+</div>
     <!--Footer for the welcome page-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
     <p>Contact me: engjikrass@hotmail.com</p>
