--- a/news.html
+++ b/news.html
@@ -20,13 +20,14 @@
     <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
     <hr>
 </div>
+</div>
 <div class="badge-container">
 <h3>VS</h3>
 <img src="barcelona-club-emblem.jpg" alt="pic of barcelona badge">
 <h3>VS</h3>
 <img src="inter-club-emblem.png" alt="pic of inter badge">
-<footer class="footer-container">
 </div>
+<footer class="footer-container">
     <!--Footer for the welcome page-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
     <p>Contact me: engjikrass@hotmail.com</p>
