--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
 <img src="arsenal-football-club.png" alt="pic of arsenal badge">
 <h3>VS</h3>
 <img src="psg-club-emblem.jpg" alt="pic of arsenal badge">
-<hr>
+<h3>THE SEMI-FINALS ARE SET</h3>
 <img src="barcelona-club-emblem.jpg" alt="pic of barcelona badge">
 <h3>VS</h3>
 <img src="inter-club-emblem.png" alt="pic of inter badge">
