--- a/news.html
+++ b/news.html
@@ -22,11 +22,11 @@
 </div>
 </div>
 <div class="badge-container">
-<img src="arsenal-football-club.png" alt="pic of arsenal badge">
+<img src="arsenal-club-final.png" alt="pic of arsenal badge">
 <h3>VS</h3>
-<img src="psg-club-emblem.jpg" alt="pic of arsenal badge">
+<img src="psg-club-final.png" alt="pic of arsenal badge">
 <h3>THE SEMI-FINALS ARE SET</h3>
-<img src="barcelona-club-emblem.jpg" alt="pic of barcelona badge">
+<img src="barcelona-club-final.png" alt="pic of barcelona badge">
 <h3>VS</h3>
 <img src="inter-club-emblem.png" alt="pic of inter badge">
 </div>
