--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
 <h3>THE SEMI-FINALS ARE SET</h3>
 <img src="barcelona-club-final.png" alt="pic of barcelona badge">
 <h3>VS</h3>
-<img src="inter-club-emblem.png" alt="pic of inter badge">
+<img src="inter-club-final.png" alt="pic of inter badge">
 </div>
 <footer class="footer-container">
     <!--Footer for the welcome page-->
