--- a/news.html
+++ b/news.html
@@ -22,6 +22,7 @@
 </div>
 </div>
 <div class="badge-container">
+<article-header class="whole-container">
 <img src="arsenal-club-final.png" alt="pic of arsenal badge">
 <h3>VS</h3>
 <img src="psg-club-final.png" alt="pic of arsenal badge">
@@ -41,7 +42,7 @@ Coach Hansi Flick confirmed Szczęsny will remain in goal despite ter Stegen's r
 Inter Milan knocked out Bayern Munich 4-3, led by Lautaro Martínez, who's scored 8 goals this tournament.
 First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
 </news>
-
+</article-header>
 <footer class="footer-container">
     <!--Footer-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
