--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
 <img src="inter-club-final.png" alt="pic of inter badge">
 </div>
 <news class="news-container">
-<news-article clas="article-container">
+<news-article class="article-container">
 The Champions League semi-finals are here, with Arsenal facing PSG and Barcelona taking on Inter Milan in two high-stakes clashes.
 Arsenal powered past Real Madrid 5-1 on aggregate. 
 “This is the biggest game the Emirates has seen,” said Mikel Arteta. 
