--- a/news.html
+++ b/news.html
@@ -21,6 +21,7 @@
     <hr>
 </div>
 </div>
+<main class="main-container">
 <div class="badge-container">
 <article-header class="whole-container">
 <img src="arsenal-club-final.png" alt="pic of arsenal badge">
@@ -45,6 +46,7 @@ First legs are set for April 29-30; second legs on May 6-7. The final will be he
 </news>
 </news-article>
 </article-header>
+</main>
 <footer class="footer-container">
     <!--Footer-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
