--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 </div>
 <main class="main-container">
 <div class="badge-container">
-<article-header class="whole-container">
+<div class="whole-container">
 <img src="arsenal-club-final.png" alt="pic of arsenal badge">
 <h3>VS</h3>
 <img src="psg-club-final.png" alt="pic of arsenal badge">
@@ -33,7 +33,7 @@
 <img src="inter-club-final.png" alt="pic of inter badge">
 </div>
 <news class="news-container">
-<news-article class="article-container">
+<div class="article-container">
 The Champions League semi-finals are here, with Arsenal facing PSG and Barcelona taking on Inter Milan in two high-stakes clashes.
 Arsenal powered past Real Madrid 5-1 on aggregate. 
 “This is the biggest game the Emirates has seen,” said Mikel Arteta. 
@@ -44,9 +44,9 @@ Coach Hansi Flick confirmed Szczęsny will remain in goal despite ter Stegen's r
 Inter Milan knocked out Bayern Munich 4-3, led by Lautaro Martínez, who's scored 8 goals this tournament.
 First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
 </news>
-</news-article>
-</article-header>
 </main>
+</div>
+</div>
 <footer class="footer-container">
     <!--Footer-->
     <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
