--- a/news.html
+++ b/news.html
@@ -10,47 +10,47 @@
 <body>
     <div class="header-container">
         <!--The home pages title-->
-    <h1>NEWS</h1>
-    <hr>
-<div class="button-container">
-    <!--The buttons linked to ther pages-->
-    <h2><a href="index.html">HOME PAGE</a></h2>
-    <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
-    <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
-    <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
-    <hr>
-</div>
-</div>
-<main class="main-container">
-<div class="badge-container">
-<div class="whole-container">
-<img src="arsenal-club-final.png" alt="pic of arsenal badge">
-<h3>VS</h3>
-<img src="psg-club-final.png" alt="pic of arsenal badge">
-<h3>THE SEMI-FINALS ARE SET</h3>
-<img src="barcelona-club-final.png" alt="pic of barcelona badge">
-<h3>VS</h3>
-<img src="inter-club-final.png" alt="pic of inter badge">
-</div>
-<news class="news-container">
-<div class="article-container">
-The Champions League semi-finals are here, with Arsenal facing PSG and Barcelona taking on Inter Milan in two high-stakes clashes.
-Arsenal powered past Real Madrid 5-1 on aggregate. 
-“This is the biggest game the Emirates has seen,” said Mikel Arteta. 
-Analyst Troy Deeney added, “Arsenal will have too much for PSG.”
-PSG edged out Aston Villa 5-4, with Ousmane Dembélé leading the scoring. 
-On the other side, Barcelona advanced after beating Dortmund 5-3 overall. 
-Coach Hansi Flick confirmed Szczęsny will remain in goal despite ter Stegen's return.
-Inter Milan knocked out Bayern Munich 4-3, led by Lautaro Martínez, who's scored 8 goals this tournament.
-First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
-</news>
-</main>
-</div>
-</div>
-<footer class="footer-container">
-    <!--Footer-->
-    <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
-    <p>Contact me: engjikrass@hotmail.com</p>
-</footer>
+        <h1>NEWS</h1>
+        <hr>
+        <div class="button-container">
+            <!--The buttons linked to other pages-->
+            <h2><a href="index.html">HOME PAGE</a></h2>
+            <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
+            <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
+            <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
+            <hr>
+        </div>
+    </div>
+    <main class="main-container">
+        <div class="badge-container">
+            <div class="whole-container">
+                <img src="arsenal-club-final.png" alt="pic of arsenal badge">
+                <h3>VS</h3>
+                <img src="psg-club-final.png" alt="pic of psg badge">
+                <h3>THE SEMI-FINALS ARE SET</h3>
+                <img src="barcelona-club-final.png" alt="pic of barcelona badge">
+                <h3>VS</h3>
+                <img src="inter-club-final.png" alt="pic of inter badge">
+            </div>
+        </div>
+        <news class="news-container">
+         <div class="article-container">
+        The Champions League semi-finals are here, with Arsenal facing PSG and Barcelona taking on Inter Milan in two high-stakes clashes.
+        Arsenal powered past Real Madrid 5-1 on aggregate. 
+       “This is the biggest game the Emirates has seen,” said Mikel Arteta. 
+        Analyst Troy Deeney added, “Arsenal will have too much for PSG.”
+        PSG edged out Aston Villa 5-4, with Ousmane Dembélé leading the scoring. 
+        On the other side, Barcelona advanced after beating Dortmund 5-3 overall. 
+        Coach Hansi Flick confirmed Szczęsny will remain in goal despite ter Stegen's return.
+        Inter Milan knocked out Bayern Munich 4-3, led by Lautaro Martínez, who's scored 8 goals this tournament.
+        First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
+        </div>
+        </news>
+    </main>
+    <footer class="footer-container">
+        <!--Footer-->
+        <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
+        <p>Contact me: engjikrass@hotmail.com</p>
+    </footer>
 </body>
 </html>
