--- a/news.html
+++ b/news.html
@@ -45,6 +45,12 @@
         First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
         </div>
     </main>
+    <div class="tenor-gif-embed" 
+    data-postid="27347450" data-share-method="host" 
+    data-aspect-ratio="1.73913" data-width="100%">
+    <a href="https://tenor.com/view/thierry-henry-gif-27347450">Thierry Henry GIF</a>
+    from <a href="https://tenor.com/search/thierry+henry-gifs">Thierry Henry GIFs</a>
+   </div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <footer class="footer-container">
         <!--Footer-->
         <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
