--- a/news.html
+++ b/news.html
@@ -51,6 +51,8 @@
     <a href="https://tenor.com/view/thierry-henry-gif-27347450">Thierry Henry GIF</a>
     from <a href="https://tenor.com/search/thierry+henry-gifs">Thierry Henry GIFs</a>
    </div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+</div>
+</div>
     <footer class="footer-container">
         <!--Footer-->
         <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
