--- a/news.html
+++ b/news.html
@@ -46,6 +46,7 @@
         </div>
     </main>
 </div>
+<img src="thierry-henry.gif" alt="photo of a bald man smiling">
     <footer class="footer-container">
         <!--Footer-->
         <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
