--- a/match-reports.html
+++ b/match-reports.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="layout.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<div class="header-container">
+    <!--The home pages title-->
+    <h1>NEWS</h1>
+    <hr>
+    <div class="button-container">
+        <!--The buttons linked to other pages-->
+        <h2><a href="index.html">HOME PAGE</a></h2>
+        <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
+        <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
+        <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
+        <hr>
+    </div>
+</div>
+<main class="main-container">
+    <div class="badge-container">
+        <div class="whole-container">
+            <img src="arsenal-club-final.png" alt="pic of arsenal badge">
+            <h3>VS</h3>
+            <img src="psg-club-final.png" alt="pic of psg badge">
+            <h3>THE SEMI-FINALS ARE SET</h3>
+            <img src="barcelona-club-final.png" alt="pic of barcelona badge">
+            <h3>VS</h3>
+            <img src="inter-club-final.png" alt="pic of inter badge">
+        </div>
+    </div>
+
+    
+    <footer class="footer-container">
+        <!--Footer-->
+        <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
+        <p>Contact me: engjikrass@hotmail.com</p>
+    </footer>
 <body>
     
 </body>
