--- a/match-reports.html
+++ b/match-reports.html
@@ -8,11 +8,11 @@
 </head>
 <div class="header-container">
     <!--The home pages title-->
-    <h1>NEWS</h1>
+    <h1>FUT FRENZY</h1>
     <hr>
     <div class="button-container">
         <!--The buttons linked to other pages-->
-        <h2><a href="index.html">HOME PAGE</a></h2>
+        <h2><a href="news.html">NEWS</a></h2>
         <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
         <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
         <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
