--- a/match-reports.html
+++ b/match-reports.html
@@ -8,7 +8,7 @@
 </head>
 <div class="header-container">
     <!--The home pages title-->
-    <h1>FUT FRENZY</h1>
+    <h1><a href="index.html">FUT FRENZY</a></h1>
     <hr>
     <div class="button-container">
         <!--The buttons linked to other pages-->
