--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header-container active">
     <div class="header-container">
         <!--The home pages title-->
         <h1><a href="index.html">FUT FRENZY</a></h1>
@@ -21,6 +22,7 @@
             <hr>
         </div>
     </div>
+</div>
     <main class="main-container">
         <div class="badge-container">
             <div class="whole-container">
