--- a/news.html
+++ b/news.html
@@ -8,21 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header-container active">
     <div class="header-container">
         <!--The home pages title-->
         <h1><a href="index.html">FUT FRENZY</a></h1>
         <hr>
         <div class="button-container">
             <!--The buttons linked to other pages-->
+            <div class="header-container active"></div>
             <h2><a href="news.html">NEWS</a></h2>
+        </div>
             <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
             <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
             <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
             <hr>
         </div>
     </div>
-</div>
+
     <main class="main-container">
         <div class="badge-container">
             <div class="whole-container">
