--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
         <hr>
         <div class="button-container">
             <!--The buttons linked to other pages-->
-            <div class="header-container active"></div>
+            <div class="header-container active">
             <h2><a href="news.html">NEWS</a></h2>
         </div>
             <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
