--- a/match-reports.html
+++ b/match-reports.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="match-reports.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,7 +20,13 @@
         <hr>
     </div>
 </div>
-
+<h2>RECENT TOP 5 LEAGUE SCORES</h2>
+<hr>
+<h3>LA LIGA</h3>
+<h3>PREMIER LEAGUE</h3>
+<h3>SERIE A</h3>
+<h3>BUNDESLIGA</h3>
+<h3>LIGUE 1</h3>
 
     
     <footer class="footer-container">
