pics of league logos

--- a/match-reports.html
+++ b/match-reports.html
@@ -22,12 +22,13 @@
 </div>
 <h2>RECENT TOP 5 LEAGUE SCORES</h2>
 <hr>
-<h3>LA LIGA</h3>
-<h3>PREMIER LEAGUE</h3>
-<h3>SERIE A</h3>
-<h3>BUNDESLIGA</h3>
-<h3>LIGUE 1</h3>
-
+   <div class="league-container">
+    <img src="Premier_League_Logo.svg.png" alt="pic of premier league logo">
+    <img src="Spanish-La-Liga-Logo.png" alt="pic of la liga logo">
+    <img src="serie-a-badge.png" alt="pic of seria logo">
+    <img src="bundesliga-logo.png" alt="pic of bundesliga logo">
+    <img src="ligue-1-logo.png" alt="pic of ligue 1 logo">
+</div>
     
     <footer class="footer-container">
         <!--Footer-->
