--- a/match-reports.html
+++ b/match-reports.html
@@ -22,12 +22,27 @@
 </div>
 <h2>RECENT TOP 5 LEAGUE SCORES</h2>
 <hr>
-   <div class="league-container">
+  <div class="league-container">
+   <div class="league-box">
     <img src="Premier_League_Logo.svg.png" alt="pic of premier league logo">
+    <div class="league-info">blah blah</div>
+  </div>
+  <div class="league-box">
     <img src="Spanish-La-Liga-Logo.png" alt="pic of la liga logo">
+    <div class="league-info">blah blah</div>
+  </div>
+  <div class="league-box">
     <img src="serie-a-badge.png" alt="pic of seria logo">
+    <div class="league-info">blah blah</div>
+  </div>
+  <div class="league-box">
     <img src="bundesliga-logo.png" alt="pic of bundesliga logo">
+    <div class="league-info">blah blah</div>
+  </div>
+  <div class="league-box">
     <img src="ligue-1-logo.png" alt="pic of ligue 1 logo">
+    <div class="league-info">blah blah</div>
+  </div>
 </div>
     
     <footer class="footer-container">
