--- a/match-reports.html
+++ b/match-reports.html
@@ -24,11 +24,14 @@
 <hr>
   <div class="league-container">
    <div class="league-box">
-    <img src="Premier_League_Logo.svg.png" alt="pic of premier league logo">
-    <div class="league-info">blah blah</div>
+    <img src="Premier_League_Logo.svg-removebg-preview.png" alt="pic of premier league logo">
+    <div class="league-info">blah blahwcbwijcbwjcbwjhcbhwchwcbhwcbhjwchw
+        w jcwijcwjc wjc jwbcjdwcbjqcqjcncjw
+        cwnjcwcnjqcwkjcnwkcj
+    </div>
   </div>
   <div class="league-box">
-    <img src="Spanish-La-Liga-Logo.png" alt="pic of la liga logo">
+    <img src="Spanish-La-Liga-Logo-removebg-preview.png" alt="pic of la liga logo">
     <div class="league-info">blah blah</div>
   </div>
   <div class="league-box">
