--- a/match-reports.html
+++ b/match-reports.html
@@ -47,6 +47,7 @@
     <div class="league-info">blah blah</div>
   </div>
 </div>
+<!--Tee top 3 g/a johtajaa kuvilla-->
     
     <footer class="footer-container">
         <!--Footer-->
