--- a/match-reports.html
+++ b/match-reports.html
@@ -26,70 +26,50 @@
    <div class="league-box">
     <img src="Premier_League_Logo.svg-removebg-preview.png" alt="pic of premier league logo">
     <div class="league-info">
-      Nottingham Forest 0 - 2 Brentford FC
-
-      Liverpool FC 5 - 1 Tottenham Hotspur 
-
-      AFC Bournemouth 1 - 1 Manchester United 
-
-      Southampton FC 1 - 2 Fulham FC
-
-      Brighton & Hove Albion 3 - 2 West Ham United
+      Nottingham Forest 0 - 2 Brentford FC<hr>
+      Liverpool FC 5 - 1 Tottenham Hotspur <hr>
+      AFC Bournemouth 1 - 1 Manchester United <hr>
+      Southampton FC 1 - 2 Fulham FC<hr>
+      Brighton & Hove Albion 3 - 2 West Ham United<hr>
     </div>
   </div>
   <div class="league-box">
     <img src="Spanish-La-Liga-Logo-removebg-preview.png" alt="pic of la liga logo">
     <div class="league-info">
-      Barcelona 1 - 0 Mallorca
-
-      Real Madrid 1 - 0 Getafe 
-
-      Villarreal CF 1 - 0 Espanyol 
-
-      Real Betis 5 - 1 Real Valladolid
-
-      Atletico Madrid 3 - 0 Rayo Vallecano 
+      Barcelona 1 - 0 Mallorca <hr>
+      Real Madrid 1 - 0 Getafe <hr>
+      Villarreal CF 1 - 0 Espanyol <hr>
+      Real Betis 5 - 1 Real Valladolid<hr>
+      Atletico Madrid 3 - 0 Rayo Vallecano <hr>
     </div>
   </div>
   <div class="league-box">
     <img src="serie-a-badge.png" alt="pic of seria logo">
     <div class="league-info">
-      Hellas Verona 0 - 2 Cagliari Calcio 
-
-      Lazio 2 - 2 Parma Calcio
-
-      Udinese Calcio 0 - 0 Bologna FC
-
-      Atalanta BC 1 - 1 US Lecce
-
-      SSC Napoli 2 - 0 Torino FC
+      Hellas Verona 0 - 2 Cagliari Calcio<hr>
+      Lazio 2 - 2 Parma Calcio<hr>
+      Udinese Calcio 0 - 0 Bologna FC<hr>
+      Atalanta BC 1 - 1 US Lecce<hr>
+      SSC Napoli 2 - 0 Torino FC<hr>
     </div>
   </div>
   <div class="league-box">
     <img src="bundesliga-logo.png" alt="pic of bundesliga logo">
     <div class="league-info">
-      Werder Bremen 0 - 0 FC St. Pauli 
-
-      VfL Bochum 1 - 1 Union Berlin
-
-      Eintracht Frankfurt 4 - 0 RB Leipzig
-
-      TSG Hoffenheim 2 - 3 Borussia Dortmund
-
-      Bayern Munich 3 - 0 FSV Mainz
+      Werder Bremen 0 - 0 FC St. Pauli<hr>
+      VfL Bochum 1 - 1 Union Berlin<hr>
+      Eintracht Frankfurt 4 - 0 RB Leipzig<hr>
+      TSG Hoffenheim 2 - 3 Borussia Dortmund<hr>
+      Bayern Munich 3 - 0 FSV Mainz<hr>
     </div>
   </div>
   <div class="league-box">
     <img src="ligue-1-logo.png" alt="pic of ligue 1 logo">
     <div class="league-info">
       Olympique Marseille 4 - 1 Stade Brestois 29
-
       RC Lens 0 - 4 AJ Auxerre 
-
       Montpellier HSC 0 - 0 Stade de Reims
-
       FC Nantes 0 - 0 Toulouse FC
-
       Angers SCO 0 - 2 Lille OSC 
     </div>
   </div>
