--- a/match-reports.html
+++ b/match-reports.html
@@ -66,11 +66,11 @@
   <div class="league-box">
     <img src="ligue-1-logo.png" alt="pic of ligue 1 logo">
     <div class="league-info">
-      Olympique Marseille 4 - 1 Stade Brestois 29
-      RC Lens 0 - 4 AJ Auxerre 
-      Montpellier HSC 0 - 0 Stade de Reims
-      FC Nantes 0 - 0 Toulouse FC
-      Angers SCO 0 - 2 Lille OSC 
+      Olympique Marseille 4 - 1 Stade Brestois 29<hr>
+      RC Lens 0 - 4 AJ Auxerre <hr>
+      Montpellier HSC 0 - 0 Stade de Reims<hr>
+      FC Nantes 0 - 0 Toulouse FC<hr>
+      Angers SCO 0 - 2 Lille OSC <hr>
     </div>
   </div>
 </div>
