--- a/match-reports.html
+++ b/match-reports.html
@@ -20,10 +20,11 @@
         <hr>
     </div>
 </div>
-<div class="league-container">
+<div class="header-container">
 <h2>RECENT TOP 5 LEAGUE SCORES</h2>
+</div>
 <hr>
-  
+<div class="league-container">
    <div class="league-box">
     <img src="Premier_League_Logo.svg-removebg-preview.png" alt="pic of premier league logo">
     <div class="league-info">
@@ -75,8 +76,10 @@
     </div>
   </div>
 </div>
-<div class="league-container">
+<div class="header-container">
     <h2>TOP 5 BALLON D'OR RANKINGS</h2>
+</div>
+    <div class="league-container">
     <hr>
       <h3>1.</h3>
         <img src="11-Raphinha-M.webp" alt="photo of raphina">
