--- a/match-reports.html
+++ b/match-reports.html
@@ -74,17 +74,67 @@
   </div>
 </div>
     <h2>TOP 5 BALLON D'OR RANKINGS</h2>
-    <div class="league-container">
       <h3>1.</h3>
+      <div class="league-container">
+      <div class="league-box">
         <img src="11-Raphinha-M.webp" alt="photo of raphina">
+        <div class="league-info">
+          <h4>Raphinha's Case for the Ballon d'Or</h4>
+          Raphinha's electrifying pace, impeccable dribbling, 
+          and creative flair have made him a standout player this season. 
+          His ability to perform under pressure and deliver match-winning moments 
+          sets him apart. Raphinha's brilliance and influence on the pitch make him 
+          a top contender for the Ballon d'Or.</div>
+      </div>
       <h3>2.</h3>
+      <div class="league-box">
         <img src="pedri-8.webp" alt="photo of pedri">
+        <div class="league-info">
+          <h4>Pedri's Case for the Ballon d'Or</h4>
+          Pedri's exceptional vision, precise passing, and composure 
+          on the ball have made him a standout player this season. 
+          His ability to control the tempo of the game and deliver crucial 
+          performances under pressure sets him apart. Pedri's brilliance and 
+          influence on the pitch make him a deserving second contender 
+          for the Ballon d'Or.</div>
+      </div>
       <h3>3.</h3>
+      <div class="league-box">
         <img src="yamal-19.webp" alt="photo of pedri">
+        <div class="league-info">
+          <h4>Yamal's Case for the Ballon d'Or</h4>
+          Yamal's dazzling dribbling, sharp instincts, and 
+          ability to create scoring opportunities have made him 
+          a standout player this season. His knack for delivering 
+          under pressure and his consistent performances set him apart. 
+          Yamal's brilliance and influence on the pitch make him a deserving 
+          third contender for the Ballon d'Or, but will most likely
+          win a ballon d'or in the next few seasons.</div>
+      </div>
       <h3>4.</h3>
+      <div class="league-box">
         <img src="dembele.webp" alt="photo of dembele">
+        <div class="league-info">
+          <h4>Dembele's Case for the Ballon d'Or</h4>
+          Dembele's explosive speed, exceptional dribbling, 
+          and ability to score from difficult positions have made 
+          him a standout player this season. His knack for delivering 
+          in crucial moments and his consistent performances set him apart. 
+          Dembélé's brilliance and influence on the pitch make him 
+          a deserving fourth contender for the Ballon d'Or.</div>
+      </div>
       <h3>5.</h3>
+      <div class="league-box">
         <img src="salah.webp" alt="photo of salah">
+        <div class="league-info">
+          <h4>Salah's Case for the Ballon d'Or</h4>
+          Salah's incredible pace, precise finishing, 
+          and ability to create chances have made him a 
+          standout player this season. His consistency 
+          and knack for delivering in crucial moments set him 
+          apart. Salah's brilliance and influence on the pitch 
+          make him a deserving fifth contender for the Ballon d'Or.</div>
+      </div>
 </div>
     
     <footer class="footer-container">
