--- a/match-reports.html
+++ b/match-reports.html
@@ -77,7 +77,7 @@
       <div class="league-container">
         <h3>1.</h3>
       <div class="league-box">
-        <img src="11-Raphinha-M.webp" alt="photo of raphina">
+        <img src="raphina-better.webp" alt="photo of raphina">
         <div class="league-info">
           <h4>Raphinha's Case for the Ballon d'Or</h4>
           Raphinha's electrifying pace, impeccable dribbling, 
