--- a/opinion-analysis.html
+++ b/opinion-analysis.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="opinion-analysis.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -18,8 +19,17 @@
             <hr>
         </div>
     </div>
-    
+    <div class="content-container">
+    <iframesrc="https://www.youtube.com/embed/JlUI9eDkkhY?si=xKriklWBowgp7VKq" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; 
+    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+    web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+    <iframe class="dembele-container" src="https://www.youtube.com/embed/8zfHDjuPhLo?si=8hytSReqMsWzugjN" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; 
+    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+    web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
         
         <footer class="footer-container">
             <!--Footer-->
