--- a/opinion-analysis.html
+++ b/opinion-analysis.html
@@ -19,17 +19,15 @@
             <hr>
         </div>
     </div>
-    <div class="content-container">
     <iframe src="https://www.youtube.com/embed/JlUI9eDkkhY?si=xKriklWBowgp7VKq" 
     title="YouTube video player" frameborder="0" allow="accelerometer; 
     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
     web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe class="dembele-container" src="https://www.youtube.com/embed/8zfHDjuPhLo?si=8hytSReqMsWzugjN" 
+    <iframe src="https://www.youtube.com/embed/8zfHDjuPhLo?si=8hytSReqMsWzugjN" 
     title="YouTube video player" frameborder="0" allow="accelerometer; 
     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
     web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
         
         <footer class="footer-container">
             <!--Footer-->
