--- a/opinion-analysis.html
+++ b/opinion-analysis.html
@@ -19,6 +19,7 @@
             <hr>
         </div>
     </div>
+    <div class="content-container">
     <iframe src="https://www.youtube.com/embed/JlUI9eDkkhY?si=xKriklWBowgp7VKq" 
     title="YouTube video player" frameborder="0" allow="accelerometer; 
     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
@@ -28,7 +29,7 @@
     title="YouTube video player" frameborder="0" allow="accelerometer; 
     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
     web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        
+     </div>
         <footer class="footer-container">
             <!--Footer-->
             <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
