--- a/opinion-analysis.html
+++ b/opinion-analysis.html
@@ -29,6 +29,16 @@
     title="YouTube video player" frameborder="0" allow="accelerometer; 
     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
     web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe  src="https://www.youtube.com/embed/nkeP0-T9YQU?si=_JNUI12z2CUdGbLZ" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; 
+    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;
+    web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe src="https://www.youtube.com/embed/XT3W5HyGiwc?si=SpII2I_nlWTpL0tt" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; 
+    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+    web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      </div>
         <footer class="footer-container">
             <!--Footer-->
