--- a/about-contact.html
+++ b/about-contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="about-contact.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -18,9 +19,22 @@
             <hr>
         </div>
     </div>
-    
-
-
+    <div class="contact-container">
+        <h2>Contact Information</h2>
+        <div class="info">
+          <strong> Address:</strong>
+          Fut Frenzy<br>
+          Helsiginkatu, Helsinki, 01000<br>
+          Suomi
+        </div>
+        <div class="info">
+          <strong>Email:</strong>
+          <a href="mailto:info@yourcompany.com">engjell@futfrenzy.com</a>
+        </div>
+        <div class="info">
+          <strong>Phone:</strong>
+          +0467657699
+        </div>
         <footer class="footer-container">
             <!--Footer-->
             <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
